TEST_PROGRAMS/INVALID/eric_ditomasso/arithmetic.min
# test the bracket matching in expressions
var x: int;
var y: float;

print (((x)))*-(y));
